# rust-employee-api

./: .env  Cargo.toml  readme.md
migrations/2022-08-01-143822_empleeys/: down.sql  up.sql
migrations/2022-08-01-151242_city/: down.sql  up.sql
migrations/2022-08-01-155952_gender/: down.sql  up.sql
src/: main.rs  schema.rs
src/db/: mod.rs
src/employees/: model.rs  routes.rs
src/error/: mod.rs
