[package]
name = "emply"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-rt = "2.7.0"
chrono = { version="0.4.19", features=["serde"]}
dotenv = "0.15.0"
diesel = {version ="1.4.8", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
listenfd = "1.0.0"
serde = {version="1.0.140", features = ["derive"]}
serde_json = "1.0.82"
r2d2 = "0.8.10"
uuid = {version = "1.1.2", features = ["serde", "v4"] }